fix page overflow

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,6 @@ body {
     /* font-family: 'Poppins', sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
 }
 
 code {
@@ -19,8 +18,8 @@ code {
     monospace;
 }
 
-body::-webkit-scrollbar {
-  width: 0.3em;
+/* body::-webkit-scrollbar {
+  width: 1em;
 }
 
 body::-webkit-scrollbar-track {
@@ -30,4 +29,4 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
 background-color: darkgrey;
 outline: 1px solid slategrey;
-}
+} */
